# ABCFold

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  add_custom_template.py  add_mmseqs_msa.py  af3_script_utils.py  alphafold3.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
abcfold/: LICENCE  abc_script_utils.py  abcfold.py  add_custom_template.py  add_mmseqs_msa.py  af3_script_utils.py  argparse_utils.py  run_alphafold3.py  run_boltz.py  run_chai1.py  schema.py
abcfold/alphafold3/: check_install.py  run_alphafold3.py  schema.py
abcfold/boltz/: af3_to_boltz.py  check_install.py  run_boltz.py  run_boltz_abcfold.py  schema.py
abcfold/boltz1/: af3_to_boltz1.py  check_install.py  run_boltz.py
abcfold/chai1/: af3_to_chai.py  chai.py  check_install.py  run_chai1.py  run_chai1_abcfold.py
abcfold/cli/: convert.py  fold.py  main.py  postprocess.py  prepare.py
abcfold/data/: config.ini
abcfold/html/: abcfold.html.jinja2  abcfold_vue.js  bootstrap.css  feature-viewer.bundle.js  html_utils.py  index.css  jquery.js  lodash.min.js  style.css
abcfold/output/: alphafold3.py  boltz.py  chai.py  file_handlers.py  utils.py
abcfold/plots/: pae_plot.py  pae_plots.py  plddt_plot.py  plddt_plots.py  plotter.py
abcfold/plots/pae-viewer-main/: LICENSE  README.md
abcfold/plots/pae-viewer-main/src/: jsonify_scores.py
abcfold/plots/pae-viewer-main/src/css/: complex-sequence-viewer.css  pae-viewer.css  structure-carousel.css  structure-panel.css  structure-viewer.css
abcfold/plots/pae-viewer-main/src/modules/: complex-sequence-viewer.js  pae-viewer-demo.js  pae-viewer.js  predicted-complex.js  read-chains.js  read-crosslinks.js  read-scores.js  read-structure.js  structure-carousel.js  structure-meta.js  structure-panel.js  structure-style.js  structure-viewer.js  utils.js
abcfold/plots/pae-viewer-main/src/templates/: complex-sequence-viewer.tpl  pae-viewer.tpl  paeViewerDemo.tpl  paeViewerDemoLayout.tpl  paeViewerDemo__compatibility.tpl.bak  paeViewerDemo__consent.tpl  paeViewerDemo__help.tpl  paeViewerDemo__help__ptms.tpl  paeViewerDemo__help__sequence.tpl  paeViewerDemo__help__structure.tpl  paeViewerDemo__help__upload.tpl  paeViewerDemo__help__viewer.tpl  paeViewerDemo__news.tpl  paeViewerDemo__tab__citation.tpl  (+8 more)
abcfold/plots/pae-viewer-main/standalone/: create_template.py  pae-viewer.bak  pae_viewer.py  template_test.html
abcfold/processoutput/: alphafold3.py  atoms.py  boltz.py  chai.py  file_handlers.py  utils.py
abcfold/scripts/: abc_script_utils.py  add_custom_template.py  add_mmseqs_msa.py  fetch_rcsb.py
af3_mmseqs2/: add_custom_template.py  add_mmseqs_msa.py  af3_script_utils.py  alphafold3.py  argparse_utils.py  run_boltz.py  run_chai1.py
af3_mmseqs2/boltz1/: af3_to_boltz1.py  check_install.py  process_boltz_output.py
af3_mmseqs2/chai1/: af3_to_chai.py
af3_mmseqs2/processoutput/: alphafold3.py  boltz.py  utils.py
data/: config.ini
examples/: abcfold2.yaml  chai_example.json  examples.md  ligand_example.json  nucleotide_example.json  protein_example.json
src/: abcfold.py  add_custom_template.py  add_mmseqs_msa.py  run_boltz.py  run_chai1.py
src/chai1/: af3_to_chai.py
src/processoutput/: alphafold3.py  boltz.py
tests/: conftest.py  test_abcfold.py  test_add_mmseqs2.py  test_af3_output.py  test_af3_to_boltz.py  test_af3_to_chai.py  test_argparse.py  test_boltz_output.py  test_chai_output.py  test_custom_template.py  test_file_handlers.py  test_logging.py  test_placeholder.py  test_plots.py  test_run_alphafold3.py  test_run_boltz.py  test_run_chai.py  test_run_scripts.py  test_utilities.py
tests/test_data/: 1G03.cif  6BJ9.cif  6BJ9A.cif  6BJ9_metadata_strip.cif  inputA.json  inputAB.json  inputA_template.json  inputAmsa.json  inputBOND.json  inputDNA.json  inputLIG.json  inputPTM.json  inputRNA.json  template_test.html  test.div.html
tests/test_data/af3test/seed-1_sample-0/: summary_confidences.json
tests/test_data/af3test/seed-1_sample-1/: confidences.json  model.cif  summary_confidences.json
tests/test_data/af3test/seed-1_sample-2/: summary_confidences.json
tests/test_data/af3test/seed-1_sample-3/: summary_confidences.json
tests/test_data/af3test/seed-1_sample-4/: confidences.json  summary_confidences.json
tests/test_data/alphafold3_6BJ9/: 6bj9_model.cif  6bj9_summary_confidences.json  ranking_scores.csv
tests/test_data/alphafold3_6BJ9/seed-1_sample-0/: model.cif
tests/test_data/alphafold3_6BJ9/seed-1_sample-1/: model.cif  summary_confidences.json
tests/test_data/alphafold3_af3test/seed-1_sample-0/: confidences.json  model.cif
tests/test_data/alphafold3_af3test/seed-1_sample-2/: confidences.json  model.cif
tests/test_data/alphafold3_af3test/seed-1_sample-3/: confidences.json  model.cif
tests/test_data/alphafold3_af3test/seed-1_sample-4/: model.cif
tests/test_data/boltz_results_boltz_test/processed/: manifest.json
tests/test_data/chai1/: pred.model_idx_0.cif  scores.model_idx_0.npz
tests/test_data/chai1_6BJ9/: pred.model_idx_0.cif  pred.model_idx_1.cif  scores.model_idx_1.npz
tests/test_data/chai1_6BJ9_seed-1/: pred.model_idx_1.cif  scores.model_idx_0.npz  scores.model_idx_1.npz
tests/test_data/chai1_test/: pae_scores.npy  pred.model_idx_0.cif  pred.model_idx_1.cif  scores.model_idx_0.npz  scores.model_idx_1.npz
(+52 files in other folders)
