[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "af3_mmseqs2"
version = "0.1.0"  
description = "Alphafold3 input processing tools"
readme = "README.md"
license = { text = "BSD License" }
authors = [
    { name = "Adam Simpkin", email = "hlasimpk@liverpool.ac.uk" },
    { name = "Luc Elliott", email = "hllelli2@liverpool.ac.uk" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "colorama",
    "tqdm",
    "biopython",
    "requests",
]

[project.urls]
homepage = "https://github.com/rigdenlab/af3_mmseqs_scripts"

[tool.setuptools]
packages = ["af3_mmseqs2"]
include-package-data = true

[tool.setuptools.package-data]
af3_mmseqs2 = ["data/config.ini"]

[project.scripts]
alphafold3 = "af3_mmseqs2.alphafold3:main"
mmseqs2msa = "af3_mmseqs2.add_mmseqs_msa:main"
custom_templates = "af3_mmseqs2.add_custom_template:main"