[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ABCFold"
version = "0.1.0"
description = "Input processing tools for AlphaFold3, Boltz-1 and Chai-1"
readme = "README.md"
license = { text = "BSD License" }
authors = [
    { name = "Adam Simpkin", email = "hlasimpk@liverpool.ac.uk" },
    { name = "Luc Elliott", email = "hllelli2@liverpool.ac.uk" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "colorama",
    "tqdm",
    "biopython==1.84",
    "requests",
    "types-requests",
    "pandas",
]

[project.urls]
homepage = "https://github.com/rigdenlab/ABCFold"

[tool.setuptools]
packages = [
    "src",
    "src.boltz1",
    "src.processoutput",
]
include-package-data = true

[tool.setuptools.package-data]
src = ["data/config.ini"]

[project.scripts]
abcfold = "src.abcfold:main"
mmseqs2msa = "src.add_mmseqs_msa:main"
custom_templates = "src.add_custom_template:main"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
