[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ABCFold"
version = "1.0.7"
description = "Input processing tools for AlphaFold3, Boltz and Chai-1"
readme = "README.md"
license = { text = "BSD License" }
authors = [
    { name = "Adam Simpkin", email = "hlasimpk@liverpool.ac.uk" },
    { name = "Luc Elliott", email = "hllelli2@liverpool.ac.uk" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy==1.26.4",
    "colorama",
    "tqdm",
    "biopython==1.84",
    "requests",
    "types-requests",
    "pandas==2.2.3",
    "plotly",
    "jinja2",
    "pyarrow==19.0.1",

]

[project.urls]
homepage = "https://github.com/rigdenlab/ABCFold"

[tool.setuptools]
packages = [
    "abcfold",
    "abcfold.alphafold3",
    "abcfold.boltz",
    "abcfold.chai1",
    "abcfold.html",
    "abcfold.output",
    "abcfold.plots",
    "abcfold.plots.pae-viewer-main",
    "abcfold.plots.pae-viewer-main.src",
    "abcfold.plots.pae-viewer-main.src.css",
    "abcfold.plots.pae-viewer-main.src.modules",
    "abcfold.plots.pae-viewer-main.src.templates",
    "abcfold.plots.pae-viewer-main.standalone",
    "abcfold.plots.pae-viewer-main.standalone.css",
    "abcfold.plots.pae-viewer-main.standalone.js",
    "abcfold.plots.pae-viewer-main.standalone.libs",
    "abcfold.scripts",

]
include-package-data = true

[tool.setuptools.package-data]
abcfold = ["data/config.ini"]

[project.scripts]
abcfold = "abcfold.abcfold:main"
mmseqs2msa = "abcfold.scripts.add_mmseqs_msa:main"
custom_templates = "abcfold.scripts.add_custom_template:main"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
